// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiCollapsedNavItem renders a popover if items are passed 1`] = `
<div
  class="euiPopover euiCollapsedNavItem testClass1 testClass2 emotion-euiPopover-block-euiTestCss"
  data-test-subj="test subject string"
>
  <span
    class="euiToolTipAnchor emotion-euiToolTipAnchor-block"
    id="generated-id-wrapper"
  >
    <button
      aria-label="Item, quick navigation menu"
      class="euiButtonIcon euiCollapsedNavButton emotion-euiButtonIcon-s-empty-text-euiCollapsedNavButton"
      data-test-subj="euiCollapsedNavButton"
      type="button"
    >
      <span
        aria-hidden="true"
        class="euiButtonIcon__icon"
        color="inherit"
        data-euiicon-type="boxesHorizontal"
      />
    </button>
  </span>
</div>
`;

exports[`EuiCollapsedNavItem renders an icon button/link if href is passed 1`] = `
<span
  aria-label="aria-label"
  class="euiToolTipAnchor euiCollapsedNavItem testClass1 testClass2 emotion-euiToolTipAnchor-block-euiTestCss"
  data-test-subj="test subject string"
  id="generated-id-wrapper"
>
  <a
    aria-label="Item, quick navigation menu"
    class="euiButtonIcon euiCollapsedNavButton emotion-euiButtonIcon-s-empty-text-euiCollapsedNavButton"
    data-test-subj="euiCollapsedNavButton"
    href="#"
    rel="noreferrer"
  >
    <span
      aria-hidden="true"
      class="euiButtonIcon__icon"
      color="inherit"
      data-euiicon-type="link"
    />
  </a>
</span>
`;
